--- a/index.html
+++ b/index.html
@@ -287,9 +287,10 @@
 <!-- 	<script src="{{asset('../assets/js/FBXloader.js')}}"></script>
 <script src="{{asset('../assets/js/Inflate.min.js')}}"></script> -->
 <script src="public/assets/js/animacion_cuy/Funciones_Easing.js"></script>
+<script type="module" src="public/assets/js/animacion_cuy/cuy_clases/cuy_class.js"></script>
 <script type="module" src="public/assets/js/animacion_cuy/cuy_clases/archivos_class.js"></script>
-<script  src="public/assets/js/animacion_cuy/animacion.js"></script>
-<script src="public/assets/js/animacion_cuy/animacion_cuy.js"></script>
+<!-- <script  src="public/assets/js/animacion_cuy/animacion.js"></script>
+<script src="public/assets/js/animacion_cuy/animacion_cuy.js"></script> -->
 <!-- <script src="public/assets/js/animacion_cuy/animacion_ganador.js')}}"></pt> -->
 
 <script src="public/assets/js/animacion_cuy/animacion_cuy_teclas.js"></script>
@@ -306,6 +307,8 @@
 <script src="public/assets/js/animacion_cuy/jquery-glowing.js"></script>
 <script src="public/assets/js/animacion_cuy/jquery.color.js"></script>
 <script src="public/assets/js/animacion_cuy/jquery.illuminate.0.7.min.js"></script>
+
+<script type="module" src="public/assets/js/animacion_cuy/cuy_clases/index.js"></script>
 
 <!-- <script src="{{asset('../assets/js/animacion_cuy/jquery.fittext.js')}}"></script> -->
 <script type="x-shader/x-vertex" id="vertexShader">
